--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
+    testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
     testImplementation 'com.codeborne:selenide:6.13.0'
 }
 
@@ -25,5 +26,4 @@ test {
     // в тестах, вызывая `gradlew test -Dselenide.headless=true` будем передавать этот параметр в JVM (где его подтянет Selenide)
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
 }
-    useJUnitPlatform()
-}
+
