--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,8 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
-    testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+    testImplementation 'org.seleniumhq.selenium:selenium-java:4.8.3'
+    testImplementation 'io.github.bonigarcia:webdrivermanager:5.3.0'
     testImplementation 'com.codeborne:selenide:6.13.0'
 }
 
